// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BlockStack > animations 1`] = `
{
  "head.fadeOut": [
    "bubbles.head.1",
    "bubbles.head.2",
    "bubbles.head.4",
    "bubbles.head.3",
    "bubbles.head.4",
    "bubbles.head.6",
    "bubbles.head.5",
    "bubbles.head.6",
    "bubbles.head.5",
  ],
  "head.idle.d3": [
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.walking.d3.3",
    "head.blinking.d3",
    "head.walking.d3.3",
    "head.blinking.d3",
  ],
  "head.idle.d4": [
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.walking.d4.3",
    "head.blinking.d4",
    "head.walking.d4.3",
    "head.blinking.d4",
  ],
  "head.idle.d5": [
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.blinking.d5",
    "head.walking.d5.2",
    "head.blinking.d5",
  ],
  "head.idle.d6": [
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.walking.d6.3",
    "head.blinking.d6",
    "head.walking.d6.3",
    "head.blinking.d6",
  ],
  "head.idle.d7": [
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.walking.d7.3",
    "head.blinking.d7",
    "head.walking.d7.3",
    "head.blinking.d7",
  ],
  "head.walking.d0": [
    "head.walking.d0.1",
    "head.walking.d0.2",
    "head.walking.d0.3",
    "head.walking.d0.2",
  ],
  "head.walking.d1": [
    "head.walking.d1.1",
    "head.walking.d1.2",
    "head.walking.d1.3",
    "head.walking.d1.2",
  ],
  "head.walking.d2": [
    "head.walking.d2.1",
    "head.walking.d2.2",
    "head.walking.d2.3",
    "head.walking.d2.2",
  ],
  "head.walking.d3": [
    "head.walking.d3.1",
    "head.walking.d3.2",
    "head.walking.d3.3",
    "head.walking.d3.2",
  ],
  "head.walking.d4": [
    "head.walking.d4.1",
    "head.walking.d4.2",
    "head.walking.d4.3",
    "head.walking.d4.2",
  ],
  "head.walking.d5": [
    "head.walking.d5.1",
    "head.walking.d5.2",
    "head.walking.d5.3",
    "head.walking.d5.2",
  ],
  "head.walking.d6": [
    "head.walking.d6.1",
    "head.walking.d6.2",
    "head.walking.d6.3",
    "head.walking.d6.2",
  ],
  "head.walking.d7": [
    "head.walking.d7.1",
    "head.walking.d7.2",
    "head.walking.d7.3",
    "head.walking.d7.2",
  ],
  "heels.fadeOut": [
    "bubbles.heels.1",
    "bubbles.heels.2",
    "bubbles.heels.4",
    "bubbles.heels.3",
    "bubbles.heels.4",
    "bubbles.heels.6",
    "bubbles.heels.5",
    "bubbles.heels.6",
    "bubbles.heels.5",
  ],
  "heels.idle.d3": [
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
  ],
  "heels.idle.d4": [
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.standing.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
  ],
  "heels.idle.d5": [
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
  ],
  "heels.idle.d6": [
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.standing.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
  ],
  "heels.idle.d7": [
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
  ],
  "heels.mixedDirections": [
    "heels.walking.d5.2",
    "heels.walking.d6.2",
    "heels.walking.d7.2",
    "heels.walking.d0.2",
    "heels.walking.d1.2",
    "heels.walking.d2.2",
    "heels.walking.d3.2",
    "heels.walking.d4.2",
  ],
  "heels.screenDirections": [
    "heels.walking.d5.2",
    "heels.walking.d7.2",
    "heels.walking.d1.2",
    "heels.walking.d3.2",
  ],
  "heels.walking.d0": [
    "heels.walking.d0.1",
    "heels.walking.d0.2",
    "heels.walking.d0.3",
    "heels.walking.d0.2",
  ],
  "heels.walking.d1": [
    "heels.walking.d1.1",
    "heels.walking.d1.2",
    "heels.walking.d1.3",
    "heels.walking.d1.2",
  ],
  "heels.walking.d2": [
    "heels.walking.d2.1",
    "heels.walking.d2.2",
    "heels.walking.d2.3",
    "heels.walking.d2.2",
  ],
  "heels.walking.d3": [
    "heels.walking.d3.1",
    "heels.walking.d3.2",
    "heels.walking.d3.3",
    "heels.walking.d3.2",
  ],
  "heels.walking.d4": [
    "heels.walking.d4.1",
    "heels.walking.d4.2",
    "heels.walking.d4.3",
    "heels.walking.d4.2",
  ],
  "heels.walking.d5": [
    "heels.walking.d5.1",
    "heels.walking.d5.2",
    "heels.walking.d5.3",
    "heels.walking.d5.2",
  ],
  "heels.walking.d6": [
    "heels.walking.d6.1",
    "heels.walking.d6.2",
    "heels.walking.d6.3",
    "heels.walking.d6.2",
  ],
  "heels.walking.d7": [
    "heels.walking.d7.1",
    "heels.walking.d7.2",
    "heels.walking.d7.3",
    "heels.walking.d7.2",
  ],
  "heels.worldDirections": [
    "heels.walking.d6.2",
    "heels.walking.d0.2",
    "heels.walking.d2.2",
    "heels.walking.d4.2",
  ],
  "shine.head": [
    "shine.head.1",
    "shine.head.2",
    "shine.head.3",
    "shine.head.4",
    "shine.head.5",
    "shine.head.6",
  ],
  "shine.headInSymbio": [
    "shine.head.1",
    "shine.head.2",
    "shine.head.3",
    "blank",
    "blank",
    "blank",
    "blank",
    "blank",
    "blank",
    "shine.head.4",
    "shine.head.5",
    "shine.head.6",
  ],
  "shine.heels": [
    "shine.heels.1",
    "shine.heels.2",
    "shine.heels.3",
    "shine.heels.4",
    "shine.heels.5",
    "shine.heels.6",
  ],
  "shine.heelsInSymbio": [
    "blank",
    "blank",
    "blank",
    "shine.heels.1",
    "shine.heels.2",
    "shine.heels.3",
    "shine.heels.4",
    "shine.heels.5",
    "shine.heels.6",
    "blank",
    "blank",
    "blank",
  ],
}
`;

exports[`BlockStack > frame names 1`] = `
[
  "blank",
  "bubbles.head.1",
  "bubbles.head.2",
  "bubbles.head.3",
  "bubbles.head.4",
  "bubbles.head.5",
  "bubbles.head.6",
  "bubbles.heels.1",
  "bubbles.heels.2",
  "bubbles.heels.3",
  "bubbles.heels.4",
  "bubbles.heels.5",
  "bubbles.heels.6",
  "head.blinking.d3",
  "head.blinking.d4",
  "head.blinking.d5",
  "head.blinking.d6",
  "head.blinking.d7",
  "head.falling.d0",
  "head.falling.d1",
  "head.falling.d2",
  "head.falling.d3",
  "head.falling.d4",
  "head.falling.d5",
  "head.falling.d6",
  "head.falling.d7",
  "head.walking.d0.1",
  "head.walking.d0.2",
  "head.walking.d0.3",
  "head.walking.d1.1",
  "head.walking.d1.2",
  "head.walking.d1.3",
  "head.walking.d2.1",
  "head.walking.d2.2",
  "head.walking.d2.3",
  "head.walking.d3.1",
  "head.walking.d3.2",
  "head.walking.d3.3",
  "head.walking.d4.1",
  "head.walking.d4.2",
  "head.walking.d4.3",
  "head.walking.d5.1",
  "head.walking.d5.2",
  "head.walking.d5.3",
  "head.walking.d6.1",
  "head.walking.d6.2",
  "head.walking.d6.3",
  "head.walking.d7.1",
  "head.walking.d7.2",
  "head.walking.d7.3",
  "heels.blinking.d3",
  "heels.blinking.d4",
  "heels.blinking.d5",
  "heels.blinking.d6",
  "heels.blinking.d7",
  "heels.falling.d0",
  "heels.falling.d1",
  "heels.falling.d2",
  "heels.falling.d3",
  "heels.falling.d4",
  "heels.falling.d5",
  "heels.falling.d6",
  "heels.falling.d7",
  "heels.standing.d4",
  "heels.standing.d6",
  "heels.walking.d0.1",
  "heels.walking.d0.2",
  "heels.walking.d0.3",
  "heels.walking.d1.1",
  "heels.walking.d1.2",
  "heels.walking.d1.3",
  "heels.walking.d2.1",
  "heels.walking.d2.2",
  "heels.walking.d2.3",
  "heels.walking.d3.1",
  "heels.walking.d3.2",
  "heels.walking.d3.3",
  "heels.walking.d4.1",
  "heels.walking.d4.2",
  "heels.walking.d4.3",
  "heels.walking.d5.1",
  "heels.walking.d5.2",
  "heels.walking.d5.3",
  "heels.walking.d6.1",
  "heels.walking.d6.2",
  "heels.walking.d6.3",
  "heels.walking.d7.1",
  "heels.walking.d7.2",
  "heels.walking.d7.3",
  "shadow.playable",
  "shadowMask.head.d1",
  "shadowMask.head.d2",
  "shadowMask.head.d3",
  "shadowMask.head.d4",
  "shadowMask.head.d5",
  "shadowMask.head.falling.d2",
  "shadowMask.head.falling.d3",
  "shadowMask.head.falling.d4",
  "shadowMask.head.falling.d5",
  "shadowMask.heels.d1",
  "shadowMask.heels.d2",
  "shadowMask.heels.d3",
  "shadowMask.heels.d4",
  "shadowMask.heels.d5",
  "shine.head.1",
  "shine.head.2",
  "shine.head.3",
  "shine.head.4",
  "shine.head.5",
  "shine.head.6",
  "shine.heels.1",
  "shine.heels.2",
  "shine.heels.3",
  "shine.heels.4",
  "shine.heels.5",
  "shine.heels.6",
]
`;

exports[`Toppy > animations 1`] = `
{
  "head.fadeOut": [
    "bubbles.head.1",
    "bubbles.head.2",
    "bubbles.head.4",
    "bubbles.head.3",
    "bubbles.head.4",
    "bubbles.head.6",
    "bubbles.head.5",
    "bubbles.head.6",
    "bubbles.head.5",
  ],
  "head.idle.d3": [
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.walking.d3.2",
    "head.blinking.d3",
    "head.walking.d3.2",
    "head.blinking.d3",
  ],
  "head.idle.d4": [
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.looking1.d4",
    "head.looking1.d4",
    "head.looking1.d4",
    "head.looking1.d4",
    "head.looking1.d4",
    "head.looking1.d4",
    "head.looking1.d4",
    "head.looking1.d4",
    "head.looking1.d4",
    "head.looking1.d4",
    "head.blinking.d4",
    "head.looking2.d4",
    "head.looking2.d4",
    "head.looking2.d4",
    "head.looking2.d4",
    "head.looking2.d4",
    "head.looking2.d4",
    "head.looking2.d4",
    "head.looking2.d4",
    "head.looking2.d4",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.walking.d4.2",
    "head.blinking.d4",
    "head.walking.d4.2",
    "head.blinking.d4",
  ],
  "head.idle.d5": [
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.looking1.d5",
    "head.looking1.d5",
    "head.looking1.d5",
    "head.looking1.d5",
    "head.looking1.d5",
    "head.looking1.d5",
    "head.looking1.d5",
    "head.looking1.d5",
    "head.looking1.d5",
    "head.looking1.d5",
    "head.blinking.d5",
    "head.looking2.d5",
    "head.looking2.d5",
    "head.looking2.d5",
    "head.looking2.d5",
    "head.looking2.d5",
    "head.looking2.d5",
    "head.looking2.d5",
    "head.looking2.d5",
    "head.looking2.d5",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.walking.d5.2",
    "head.blinking.d5",
    "head.walking.d5.2",
    "head.blinking.d5",
  ],
  "head.idle.d6": [
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.looking1.d6",
    "head.looking1.d6",
    "head.looking1.d6",
    "head.looking1.d6",
    "head.looking1.d6",
    "head.looking1.d6",
    "head.looking1.d6",
    "head.looking1.d6",
    "head.looking1.d6",
    "head.looking1.d6",
    "head.blinking.d6",
    "head.looking2.d6",
    "head.looking2.d6",
    "head.looking2.d6",
    "head.looking2.d6",
    "head.looking2.d6",
    "head.looking2.d6",
    "head.looking2.d6",
    "head.looking2.d6",
    "head.looking2.d6",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.walking.d6.2",
    "head.blinking.d6",
    "head.walking.d6.2",
    "head.blinking.d6",
  ],
  "head.idle.d7": [
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.walking.d7.2",
    "head.blinking.d7",
    "head.walking.d7.2",
    "head.blinking.d7",
  ],
  "head.walking.d0": [
    "head.walking.d0.1",
    "head.walking.d0.2",
    "head.walking.d0.3",
    "head.walking.d0.2",
  ],
  "head.walking.d1": [
    "head.walking.d1.1",
    "head.walking.d1.2",
    "head.walking.d1.3",
    "head.walking.d1.2",
  ],
  "head.walking.d2": [
    "head.walking.d2.1",
    "head.walking.d2.2",
    "head.walking.d2.3",
    "head.walking.d2.2",
  ],
  "head.walking.d3": [
    "head.walking.d3.1",
    "head.walking.d3.2",
    "head.walking.d3.3",
    "head.walking.d3.2",
  ],
  "head.walking.d4": [
    "head.walking.d4.1",
    "head.walking.d4.2",
    "head.walking.d4.3",
    "head.walking.d4.2",
  ],
  "head.walking.d5": [
    "head.walking.d5.1",
    "head.walking.d5.2",
    "head.walking.d5.3",
    "head.walking.d5.2",
  ],
  "head.walking.d6": [
    "head.walking.d6.1",
    "head.walking.d6.2",
    "head.walking.d6.3",
    "head.walking.d6.2",
  ],
  "head.walking.d7": [
    "head.walking.d7.1",
    "head.walking.d7.2",
    "head.walking.d7.3",
    "head.walking.d7.2",
  ],
  "heels.fadeOut": [
    "bubbles.heels.1",
    "bubbles.heels.2",
    "bubbles.heels.4",
    "bubbles.heels.3",
    "bubbles.heels.4",
    "bubbles.heels.6",
    "bubbles.heels.5",
    "bubbles.heels.6",
    "bubbles.heels.5",
  ],
  "heels.idle.d3": [
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.looking1.d3",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.walking.d3.2",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
    "heels.blinking.d3",
  ],
  "heels.idle.d4": [
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.looking1.d4",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.walking.d4.2",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
    "heels.blinking.d4",
  ],
  "heels.idle.d5": [
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.looking1.d5",
    "heels.blinking.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.looking2.d5",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.walking.d5.2",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
    "heels.blinking.d5",
  ],
  "heels.idle.d6": [
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.looking1.d6",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.walking.d6.2",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
    "heels.blinking.d6",
  ],
  "heels.idle.d7": [
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.looking1.d7",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.walking.d7.2",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
    "heels.blinking.d7",
  ],
  "heels.mixedDirections": [
    "heels.walking.d5.2",
    "heels.walking.d6.2",
    "heels.walking.d7.2",
    "heels.walking.d0.2",
    "heels.walking.d1.2",
    "heels.walking.d2.2",
    "heels.walking.d3.2",
    "heels.walking.d4.2",
  ],
  "heels.screenDirections": [
    "heels.walking.d5.2",
    "heels.walking.d7.2",
    "heels.walking.d1.2",
    "heels.walking.d3.2",
  ],
  "heels.walking.d0": [
    "heels.walking.d0.1",
    "heels.walking.d0.2",
    "heels.walking.d0.3",
    "heels.walking.d0.2",
  ],
  "heels.walking.d1": [
    "heels.walking.d1.1",
    "heels.walking.d1.2",
    "heels.walking.d1.3",
    "heels.walking.d1.2",
  ],
  "heels.walking.d2": [
    "heels.walking.d2.1",
    "heels.walking.d2.2",
    "heels.walking.d2.3",
    "heels.walking.d2.2",
  ],
  "heels.walking.d3": [
    "heels.walking.d3.1",
    "heels.walking.d3.2",
    "heels.walking.d3.3",
    "heels.walking.d3.2",
  ],
  "heels.walking.d4": [
    "heels.walking.d4.1",
    "heels.walking.d4.2",
    "heels.walking.d4.3",
    "heels.walking.d4.2",
  ],
  "heels.walking.d5": [
    "heels.walking.d5.1",
    "heels.walking.d5.2",
    "heels.walking.d5.3",
    "heels.walking.d5.2",
  ],
  "heels.walking.d6": [
    "heels.walking.d6.1",
    "heels.walking.d6.2",
    "heels.walking.d6.3",
    "heels.walking.d6.2",
  ],
  "heels.walking.d7": [
    "heels.walking.d7.1",
    "heels.walking.d7.2",
    "heels.walking.d7.3",
    "heels.walking.d7.2",
  ],
  "heels.worldDirections": [
    "heels.walking.d6.2",
    "heels.walking.d0.2",
    "heels.walking.d2.2",
    "heels.walking.d4.2",
  ],
  "shine.head": [
    "shine.head.1",
    "shine.head.2",
    "shine.head.3",
    "shine.head.4",
    "shine.head.5",
    "shine.head.6",
  ],
  "shine.headInSymbio": [
    "shine.head.1",
    "shine.head.2",
    "shine.head.3",
    "blank",
    "blank",
    "blank",
    "blank",
    "blank",
    "blank",
    "shine.head.4",
    "shine.head.5",
    "shine.head.6",
  ],
  "shine.heels": [
    "shine.heels.1",
    "shine.heels.2",
    "shine.heels.3",
    "shine.heels.4",
    "shine.heels.5",
    "shine.heels.6",
  ],
  "shine.heelsInSymbio": [
    "blank",
    "blank",
    "blank",
    "shine.heels.1",
    "shine.heels.2",
    "shine.heels.3",
    "shine.heels.4",
    "shine.heels.5",
    "shine.heels.6",
    "blank",
    "blank",
    "blank",
  ],
}
`;

exports[`Toppy > frame names 1`] = `
[
  "blank",
  "bubbles.head.1",
  "bubbles.head.2",
  "bubbles.head.3",
  "bubbles.head.4",
  "bubbles.head.5",
  "bubbles.head.6",
  "bubbles.heels.1",
  "bubbles.heels.2",
  "bubbles.heels.3",
  "bubbles.heels.4",
  "bubbles.heels.5",
  "bubbles.heels.6",
  "head.blinking.d3",
  "head.blinking.d4",
  "head.blinking.d5",
  "head.blinking.d6",
  "head.blinking.d7",
  "head.falling.d0",
  "head.falling.d1",
  "head.falling.d2",
  "head.falling.d3",
  "head.falling.d4",
  "head.falling.d5",
  "head.falling.d6",
  "head.falling.d7",
  "head.looking1.d4",
  "head.looking1.d5",
  "head.looking1.d6",
  "head.looking2.d4",
  "head.looking2.d5",
  "head.looking2.d6",
  "head.walking.d0.1",
  "head.walking.d0.2",
  "head.walking.d0.3",
  "head.walking.d1.1",
  "head.walking.d1.2",
  "head.walking.d1.3",
  "head.walking.d2.1",
  "head.walking.d2.2",
  "head.walking.d2.3",
  "head.walking.d3.1",
  "head.walking.d3.2",
  "head.walking.d3.3",
  "head.walking.d4.1",
  "head.walking.d4.2",
  "head.walking.d4.3",
  "head.walking.d5.1",
  "head.walking.d5.2",
  "head.walking.d5.3",
  "head.walking.d6.1",
  "head.walking.d6.2",
  "head.walking.d6.3",
  "head.walking.d7.1",
  "head.walking.d7.2",
  "head.walking.d7.3",
  "heels.blinking.d3",
  "heels.blinking.d4",
  "heels.blinking.d5",
  "heels.blinking.d6",
  "heels.blinking.d7",
  "heels.falling.d0",
  "heels.falling.d1",
  "heels.falling.d2",
  "heels.falling.d3",
  "heels.falling.d4",
  "heels.falling.d5",
  "heels.falling.d6",
  "heels.falling.d7",
  "heels.looking1.d3",
  "heels.looking1.d4",
  "heels.looking1.d5",
  "heels.looking1.d6",
  "heels.looking1.d7",
  "heels.looking2.d5",
  "heels.walking.d0.1",
  "heels.walking.d0.2",
  "heels.walking.d0.3",
  "heels.walking.d1.1",
  "heels.walking.d1.2",
  "heels.walking.d1.3",
  "heels.walking.d2.1",
  "heels.walking.d2.2",
  "heels.walking.d2.3",
  "heels.walking.d3.1",
  "heels.walking.d3.2",
  "heels.walking.d3.3",
  "heels.walking.d4.1",
  "heels.walking.d4.2",
  "heels.walking.d4.3",
  "heels.walking.d5.1",
  "heels.walking.d5.2",
  "heels.walking.d5.3",
  "heels.walking.d6.1",
  "heels.walking.d6.2",
  "heels.walking.d6.3",
  "heels.walking.d7.1",
  "heels.walking.d7.2",
  "heels.walking.d7.3",
  "shadow.playable",
  "shadowMask.head.d1",
  "shadowMask.head.d2",
  "shadowMask.head.d3",
  "shadowMask.head.d4",
  "shadowMask.head.d5",
  "shadowMask.head.falling.d2",
  "shadowMask.head.falling.d3",
  "shadowMask.head.falling.d4",
  "shadowMask.head.falling.d5",
  "shadowMask.heels.d1",
  "shadowMask.heels.d2",
  "shadowMask.heels.d3",
  "shadowMask.heels.d4",
  "shadowMask.heels.d5",
  "shine.head.1",
  "shine.head.2",
  "shine.head.3",
  "shine.head.4",
  "shine.head.5",
  "shine.head.6",
  "shine.heels.1",
  "shine.heels.2",
  "shine.heels.3",
  "shine.heels.4",
  "shine.heels.5",
  "shine.heels.6",
]
`;
